# CMake_Setups

Full SDL2 + Json/: CMakeLists.txt
Imgui+SDL3+SDL3_image+SDL3_gfx/: CMakeLists.txt  README.md
Imgui+SDL3+SDL3_image+SDL3_gfx/src/: main.cpp
SDL3 + OpenGL + Glad + ImGui (triangle)/: CMakeLists.txt
SDL3 + OpenGL + Glad + ImGui (triangle)/src/: main.cpp
SDL3+OpenGL+ImGui+GLM/src/: main.cpp
